# Mogbot

./: .env  .env.cloud.example  .env.example  .env.local.example  .gitignore  Dockerfile.sandbox  README.md  docker-compose.yml  package-lock.json  package.json
backend/: Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py
backend/app/: config.py  database.py  main.py  models.py
backend/app/core/: __init__.py  budget.py  orchestrator.py
backend/app/routers/: tasks.py  ws.py
backend/app/tools/: __init__.py  browser.py  code_exec.py  definitions.py  files.py  human.py
public/: index.html
src/: main.ts
src/core/: budget.ts  memory.ts  orchestrator.ts  planner.ts
src/tools/: browser.ts  code-exec.ts  definitions.ts  files.ts  human.ts
src/ui/: server.ts
webapp/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
webapp/src/: App.css  App.tsx  index.css
webapp/src/components/: BrowserView.tsx  BudgetBar.tsx  LogStream.tsx  TaskHistory.tsx  TaskInput.tsx
webapp/src/hooks/: useWebSocket.ts
webapp/src/lib/: api.ts
