[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mogbot-backend"
version = "0.1.0"
requires-python = ">= 3.12"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "anthropic",
    "asyncpg",
    "alembic",
    "sqlalchemy[asyncio]",
    "playwright",
    "python-dotenv",
    "pydantic-settings",
    "websockets",
]

[tool.setuptools.packages.find]
include = ["app*"]
